# sena_ws

./: README.md
devel/: .catkin  local_setup.sh
devel/include/sena_common/: Angle.h  BallInfo.h  FrontBallInfo.h  MotorInfo.h  OdomInfo.h  OmniVisionInfo.h  PPoint.h  VelCmd.h
devel/include/sena_msgs/: Angle.h  BallHandle.h  BallHandleRequest.h  BallHandleResponse.h  BallInfo.h  Floats_array.h  Floats_arrayRequest.h  Floats_arrayResponse.h  FrameToFrame.h  FrameToFrameRequest.h  FrameToFrameResponse.h  KinematicsForward.h  KinematicsForwardRequest.h  KinematicsForwardResponse.h  KinematicsInverse.h  KinematicsInverseRequest.h  KinematicsInverseResponse.h  MotorInfo.h  OdomInfo.h  OmniVisionInfo.h  PPoint.h  Shoot.h  ShootRequest.h  ShootResponse.h  VelCmd.h  Velocity.h
devel/lib/opencv/: find_ball.py
devel/lib/pkgconfig/: front_vision.pc  opencv.pc  sena_common.pc  sena_control.pc  sena_controller.pc  sena_msgs.pc
devel/lib/sena_control/: single_joint_hardware_interface
devel/lib/sena_controller/: odometry
devel/share/front_vision/cmake/: front_visionConfig.cmake
devel/share/opencv/cmake/: opencvConfig.cmake
src/opencv/: CMakeLists.txt  package.xml
src/opencv/include/: blob_detector.py
src/sena/sena_controller/: CMakeLists.txt  package.xml
src/sena/sena_controller/src/: odom.cpp  (+1 more)
src/sena/sena_msgs/: CMakeLists.txt  package.xml
src/sena/sena_msgs/msg/: BallInfo.msg  MotorInfo.msg  OdomInfo.msg  OmniVisionInfo.msg  Velocity.msg
src/sena/sena_msgs/srv/: .Kinematics.swp  FrameToFrame.srv  KinematicsForward.srv  KinematicsInverse.srv  Shoot.srv
(+144 files in other folders)
